--- a/MultihostAdapter/MultihostAdapter.Cordova/www/index.html
+++ b/MultihostAdapter/MultihostAdapter.Cordova/www/index.html
@@ -10,7 +10,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">    
-    <title>PS.Cordova.QuickAccess</title>
+    <title>Multihost Adapter</title>
     <link rel="stylesheet" href="dist/css/lib.min.css" />
     <link rel="stylesheet" href="dist/css/app.min.css" />
 </head>
