--- a/MultihostAdapter/MultihostAdapter/host-launch.html
+++ b/MultihostAdapter/MultihostAdapter/host-launch.html
@@ -9,7 +9,8 @@
 
     <script type="text/javascript" src="dist/min/@angular1.lib.min.js"></script>
     <script type="text/javascript" src="dist/min/@angular2.lib.min.js"></script>
-    <script type="text/javascript" src="dist/min/react.lib.min.js"></script>    
+    <script type="text/javascript" src="dist/min/react.lib.min.js"></script>
+    <script type="text/javascript" src="dist/min/mithril.lib.min.js"></script>
 
     <script type="text/javascript" src="dist/min/host.min.js"></script>
     <script type="text/javascript" src="dist/min/launch.min.js"></script>
