Adding Vue Adapter

--- a/MultihostAdapter/MultihostAdapter/host-launch.html
+++ b/MultihostAdapter/MultihostAdapter/host-launch.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="dist/min/@angular2.lib.min.js"></script>
     <script type="text/javascript" src="dist/min/react.lib.min.js"></script>
     <script type="text/javascript" src="dist/min/mithril.lib.min.js"></script>
+    <script type="text/javascript" src="dist/min/vue.lib.min.js"></script>
 
     <script type="text/javascript" src="dist/min/host.min.js"></script>
     <script type="text/javascript" src="dist/min/launch.min.js"></script>
