--- a/MultihostAdapter/MultihostAdapter.Cordova/www/index.html
+++ b/MultihostAdapter/MultihostAdapter.Cordova/www/index.html
@@ -27,12 +27,12 @@
     <script type="text/javascript" src="scripts/index.js"></script>
 
     <script type="text/javascript" src="scripts/app.project-cor.js"></script>
-    <script type="text/javascript" src="dist/min/base.lib.min.js"></script>
-    <script type="text/javascript" src="dist/min/mithril.lib.min.js"></script>
+    <script type="text/javascript" src="dist/min/base.lib.min.js"></script>    
     <script type="text/javascript" src="dist/min/@angular1.lib.min.js"></script>
     <script type="text/javascript" src="dist/min/@angular2.lib.min.js"></script>
     <script type="text/javascript" src="dist/min/react.lib.min.js"></script>
     <script type="text/javascript" src="dist/min/mithril.lib.min.js"></script>
+    <script type="text/javascript" src="dist/min/vue.lib.min.js"></script>
     <script type="text/javascript" src="dist/min/host.min.js"></script>
     <script type="text/javascript" src="dist/min/launch.min.js"></script>
 </body>
